--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html
    head
-      title = "Moving Background Circle"
+      title Moving Background Circle
    body
       p.greetings#people This is a moving circle plugin
       canvas#loiter please use another browser
